--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	 <h1>Audio Player</h1>
+  <div id="buttons">
+    <button class="btn" onclick="playAudio('sound1.mp3')">Sound 1</button>
+    <button class="btn" onclick="playAudio('sound2.mp3')">Sound 2</button>
+    <button class="btn" onclick="playAudio('sound3.mp3')">Sound 3</button>
+    <button class="stop" onclick="stopAudio()">Stop</button>
+  </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
