--- a/main.html
+++ b/main.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-	 <h1>Audio Player</h1>
   <div id="buttons">
-    <button class="btn" onclick="playAudio('sound1.mp3')">Sound 1</button>
-    <button class="btn" onclick="playAudio('sound2.mp3')">Sound 2</button>
-    <button class="btn" onclick="playAudio('sound3.mp3')">Sound 3</button>
+    <button class="btn" onclick="playAudio('sound1.mp3')">applause</button>
+    <button class="btn" onclick="playAudio('sound2.mp3')">boo</button>
+    <button class="btn" onclick="playAudio('sound3.mp3')">gasp</button>
+	   <button class="btn" onclick="playAudio('sound3.mp3')">toda</button>
+	   <button class="btn" onclick="playAudio('sound3.mp3')">victory</button>
+	   <button class="btn" onclick="playAudio('sound3.mp3')">wrong</button>
     <button class="stop" onclick="stopAudio()">Stop</button>
   </div>
 
