--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
   <div id="buttons">
-    <button class="btn" onclick="playAudio('sound1.mp3')">applause</button>
-    <button class="btn" onclick="playAudio('sound2.mp3')">boo</button>
-    <button class="btn" onclick="playAudio('sound3.mp3')">gasp</button>
-	   <button class="btn" onclick="playAudio('sound3.mp3')">toda</button>
-	   <button class="btn" onclick="playAudio('sound3.mp3')">victory</button>
-	   <button class="btn" onclick="playAudio('sound3.mp3')">wrong</button>
+    <button class="btn" onclick="playAudio">applause</button>
+    <button class="btn" onclick="playAudio">boo</button>
+    <button class="btn" onclick="playAudio">gasp</button>
+	   <button class="btn" onclick="playAudio">toda</button>
+	   <button class="btn" onclick="playAudio">victory</button>
+	   <button class="btn" onclick="playAudio">wrong</button>
     <button class="stop" onclick="stopAudio()">Stop</button>
   </div>
 
