--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
   <div id="buttons">
-    <button class="btn" onclick="playAudio">applause</button>
-    <button class="btn" onclick="playAudio">boo</button>
-    <button class="btn" onclick="playAudio">gasp</button>
-	   <button class="btn" onclick="playAudio">toda</button>
-	   <button class="btn" onclick="playAudio">victory</button>
-	   <button class="btn" onclick="playAudio">wrong</button>
+    <button class="btn" onclick="playAudio('applause')">applause</button>
+    <button class="btn" onclick="playAudio('boo')">boo</button>
+    <button class="btn" onclick="playAudio('gasp')">gasp</button>
+	   <button class="btn" onclick="playAudio('toda')">toda</button>
+	   <button class="btn" onclick="playAudio('victory')">victory</button>
+	   <button class="btn" onclick="playAudio('wrong')">wrong</button>
     <button class="stop" onclick="stopAudio()">Stop</button>
   </div>
 
