--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   </div>
 
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="your_js_file_name.js">
 </script>
 
 </body>
