--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	   <button class="btn" onclick="playAudio('toda')">toda</button>
 	   <button class="btn" onclick="playAudio('victory')">victory</button>
 	   <button class="btn" onclick="playAudio('wrong')">wrong</button>
-    <button class="stop" onclick="stopAudio()">Stop</button>
+    <button class="btn" onclick="stopAudio()">Stop</button>
   </div>
 
 	<!-- the entire body must be written by student -->
